[project]
name = "hatena-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "feedparser>=6.0.11",
    "pytest>=8.4.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.0.20250602",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
