[project]
name = "hatena-sync"
version = "0.1.0"
description = "Hatena BlogとローカルMarkdownの双方向同期CLIツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "feedparser>=6.0.11",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.8.0",
    "types-requests>=2.32.0.20250602",
]

[project.scripts]
hatena-sync = "hatena_sync.__init__:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*swig.*:DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
